objects/External_Storage__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Storage_Type__c</fullName>
        <label>Storage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>DropBox</fullName>
                </value>
                <value>
                    <fullName>Google Drive</fullName>
                </value>
                <value>
                    <fullName>OneDrive</fullName>
                </value>
                <value>
                    <fullName>iCloud</fullName>
                </value>
                <value>
                    <fullName>Amazon Cloud Drive</fullName>
                </value>
                <value>
                    <fullName>OwnCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Storage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ExtSt-{0000}</displayFormat>
        <label>External Storage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>